
(executable
 (name ftest)
 ;; (libraries )
 
 ;; Disable some warnings
 ;; (flags (:standard -w -6))

 ;; Link to executable in main dir
 (promote (until-clean))
 
 )

(executable
 (name fsport)
 ;; (libraries )
 
 ;; Disable some warnings
 ;; (flags (:standard -w -6))

 ;; Link to executable in main dir
 (promote (until-clean))
 
 )

